<resources>
    <string name="app_name">My Podcasts</string>
    <string name="app_name_free">My Podcasts FREE</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_fetch_itune">Add a podcast</string>
    <string name="podcast_placeholder_title">La fabrique de l\'histoire - France Culture hghsrhsrhsrhfsrhfshfshsfh</string>
    <string name="title_activity_fetch_itune_episode">Podcast episodes</string>
    <string name="title_activity_fetch_online_episode">iTunes Podcast</string>
    <string name="title_activity_fetch_gpodder_main">Add a podcast</string>
    <string name="title_activity_play_media">Play Media</string>
    <string name="restart">Restart</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="pager_title_shopping_lists">Shopping Lists</string>
    <string name="pager_title_meals">Meals</string>
    <string name="remove_item_option">Remove Item</string>
    <string name="positive_button_create">Create</string>
    <string name="text_you">You</string>
    <string name="log_error_updating_data">Error updating data: </string>
    <string name="log_error_the_read_failed">The read failed: </string>
    <string name="log_error_occurred">"Error occurred: "</string>
    <string name="action_logout">Logout</string>
    <string name="action_share_list">Share List</string>
    <string name="action_sort">Sort</string>
    <string name="action_remove_list">Remove list</string>
    <string name="action_archive">Archive</string>
    <string name="hint_add_shopping_list">Create a list</string>
    <string name="created_by">Created by </string>
    <string name="person_shopping">%d person shopping</string>
    <string name="people_shopping">%d people shopping</string>
    <string name="title_activity_list_details">List Details</string>
    <string name="action_edit_list_name">Edit list name</string>
    <string name="positive_button_add_list_item">Add item</string>
    <string name="positive_button_edit_item">Edit name</string>
    <string name="negative_button_cancel">Cancel</string>
    <string name="dialog_message_are_you_sure_remove_list">Are you sure you want to remove this list?</string>
    <string name="dialog_message_are_you_sure_remove_item">Are you sure you want to remove this item?</string>
    <string name="button_stop_shopping">Stop Shopping</string>
    <string name="button_start_shopping">Start Shopping</string>
    <string name="text_you_are_shopping">You are shopping</string>
    <string name="text_you_and_other_are_shopping">You and %s are shopping</string>
    <string name="text_you_and_number_are_shopping">You and %d others are shopping</string>
    <string name="text_other_is_shopping">%s is shopping</string>
    <string name="text_other_and_other_are_shopping">%1$s and %2$s are shopping</string>
    <string name="text_other_and_number_are_shopping">%1$s and %2$d others are shopping</string>
    <string name="bought_by">Bought by</string>
    <string name="title_activity_meal_details">Meal Details</string>
    <string name="title_activity_add_items_from_meal">Add Meal</string>
    <string name="hint_add_meal">Create a meal</string>
    <string name="dialog_title_remove_meal">Remove meal</string>
    <string name="dialog_message_are_you_sure_remove_meal">Are you sure you want to remove this meal?</string>
    <string name="hint_enter_meal_name">Enter meal name</string>
    <string name="title_activity_archived_lists">Archived Lists</string>
    <string name="title_activity_archived_list_details">Archived List Details</string>
    <string name="dialog_title_copy_list">Copy List</string>
    <string name="dialog_title_archive_list">Archive list</string>
    <string name="dialog_message_are_you_sure_archive_list">Are you sure you want to archive this list?</string>
    <string name="dialog_message_do_you_want_to_copy">Do you want to copy this list?</string>
    <string name="toast_shopping_list_was_archived">Shopping List %s was archived.</string>
    <string name="button_footer_archived_lists">Archived Lists</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="text_dont_have_account">Don\'t have an account?</string>
    <string name="text_already_have_account">Already have an account?</string>
    <string name="button_create_account">Sign Up</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_signin_with_google">SIGN IN WITH GOOGLE</string>
    <string name="button_signin_with_password">SIGN IN</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_username">Enter your name</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="image_view_logo_image">Logo Image</string>
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_authenticating_with_firebase">Authenticating with Firebase…</string>
    <string name="progress_dialog_creating_user_with_firebase">Attempting to create account…</string>
    <string name="progress_dialog_check_inbox">Please check your inbox for your password</string>
    <string name="dialog_title_error">Error</string>
    <string name="error_message_failed_sign_in_no_network">There was a problem with the network connection.\nAre you sure you\'re connected to the internet?</string>
    <string name="log_error_invalid_provider">"Invalid provider: "</string>
    <string name="log_error_failed_to_change_password">"Failed to change the password: "</string>
    <string name="error_invalid_email_not_valid">%s is not a valid email</string>
    <string name="error_message_email_issue">There was an error with your email; please check that you entered it correctly.</string>
    <string name="error_you_didnt_give_permissions">You must give ShoppingList++ permission to access your Google account information if you want to use Google sign-in.</string>
    <string name="error_email_taken">The email is already taken.</string>
    <string name="error_invalid_password_not_valid">Please enter a password that is at least 6 characters long.</string>
    <string name="error_cannot_be_empty">This cannot be empty.</string>
    <string name="google_error_recoverable_oauth_error">"Recoverable Google OAuth error: "</string>
    <string name="google_error_google_play_services_not_available">Google Play Services are not available.</string>
    <string name="google_error_trying_to_connect_google_api">Trying to connect to Google API</string>
    <string name="google_error_auth_with_google">"Error authenticating with Google: "</string>
    <string name="google_error_network_error">"Network error: "</string>
    <string name="google_error_cant_connect_to_api">Are you sure that you set up a project for your app?
        Check out : https://console.developers.google.com/project. Also make sure you have all the proper
    gradle dependencies</string>
    <string name="oauth2_format">oauth2:%s</string>
    <string name="log_message_password_changed_successfully">Password changed successfully from temporary password to </string>
    <string name="log_message_auth_successful">auth successful.</string>
    <string name="title_activity_share_list">Share List</string>
    <string name="title_activity_add_friend">Add Friend</string>
    <string name="hint_enter_friends_email">Enter your friend\'s email</string>
    <string name="text_add_friend">Add New Friend</string>
    <string name="toast_is_already_your_friend">%s is already your friend!</string>
    <string name="toast_you_cant_add_yourself">You can\'t add yourself as a friend.</string>
    <string name="pref_title_sort_lists">Lists ordering</string>
    <string name="pref_name_sort_order_lists">pref_sort_order_lists</string>
    <string name="pref_sort_list_label_sortType">Order by</string>
    <string name="pref_sort_list_label_publish_time_entry">Publish Time</string>
    <string name="pref_sort_list_label_list_name_entry">List Name</string>
    <string name="pref_sort_list_label_owner_entry">Owner Email</string>
    <string name="pref_sort_list_label_most_recently_changed_entry">Most Recently Changed</string>
    <string name="title_activity_episode_details">EpisodeDetailsActivity</string>
    <string name="welcome_xyz_reader">Welcome to XYZ Reader!</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="up">Up</string>
    <string name="placeholder_article_title">1. Bacon spam ipsum dolor sit amet</string>
    <string name="placeholder_article_subtitle">21.12.2012 by Isaac Newton</string>
    <string name="placeholder_article_body">read more...</string>
    <string name="data_loaded_msg">Data loaded</string>
    <string name="no_data_loaded_msg">No data loaded</string>
    <string name="title_activity_fetch_gpodder_category_podcast">
        Gpodder Podcast
    </string>
    <string name="appwidget_text">No media playing</string>
    <string name="add_widget">Add widget</string>
    <string name="favorite">Favorite</string>
    <string name="error_no_metadata">Unable to retrieve metadata.</string>
    <string name="browse_genres">Genres</string>
    <string name="browse_genre_subtitle">Songs by genre</string>
    <string name="browse_musics_by_genre_subtitle">%1$s songs</string>
    <string name="random_queue_title">Random music</string>
    <string name="error_no_connection">Cannot connect to server. Please, check your Internet connectivity.</string>
    <string name="error_loading_media">Error Loading Media</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="currently_playing_song">Song currently playing</string>
    <string name="currently_playing_artist">Artist of currently playing song</string>
    <string name="currently_playing_extra_info">Extra info for currently playing song</string>
    <string name="play_item">Play item</string>
    <string name="play_pause">play or pause</string>
    <string name="skip_next">skip to next</string>
    <string name="skip_prev">skip to previous</string>
    <string name="touch_to_cast">Touch to connect to a Google Cast device</string>
    <string name="cast_application_id">CC1AD845</string>
    <string name="home_title">Home</string>
    <string name="related_content_header">You may also like</string>
    <string name="action_listen">Listen</string>
    <string name="open_content_drawer">Open the main menu</string>
    <string name="podcast_image_blur_label">Podcast Image Blur</string>
    <string name="podcast_image_label">Podcast Image</string>
    <string name="franc_inter_label">Franc Inter</string>
    <string name="signin_label">Sign In With Google Button</string>
    <string name="sign_in_button_label">Sign In Button</string>
    <string name="podcast_image">Podcast Image</string>
    <string name="par_jupiter">Par Jupiter</string>
    <string name="logout">Logout</string>
    <string name="pref_connexion_key" translatable="false">connexion_key</string>
    <string name="pref_connexion_summary_off">Sync Only On Wifi</string>
    <string name="pref_connexion_summary_on">Sync on every network</string>
    <string name="pref_connexion_title">Sync strategy</string>
    <string name="pref_sync_time_key" translatable="false">limit_podcast</string>
    <string name="pref_sync_time_summary">Sync data Every 24 hours</string>
    <string name="pref_sync_time_title">Syn time in hour</string>
    <string name="pref_top_podcast_key" translatable="false">top_podcast_key</string>
    <string name="pref_top_podcast_summary">Load top 50 podcast</string>
    <string name="pref_top_podcast_title">Limit fetch podcast</string>
    <string name="user_profile">User profile</string>
    <string name="name_placeholder">Name: MEWENEMESSE</string>
    <string name="surname_placeholder">Email: pasciano007@gmail.com</string>
    <string name="number_placeholder">Email: 91074546</string>
</resources>