<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="@bool/pref_connexion_default"
        android:key="@string/pref_connexion_key"
        android:summaryOff="@string/pref_connexion_summary_off"
        android:summaryOn="@string/pref_connexion_summary_on"
        android:title="@string/pref_connexion_title" />
    <EditTextPreference
        android:defaultValue="@integer/pref_sync_time_default"
        android:key="@string/pref_sync_time_key"
        android:summary="@string/pref_sync_time_summary"
        android:title="@string/pref_sync_time_title" />
    <EditTextPreference
        android:defaultValue="@integer/pref_top_podcast_default"
        android:key="@string/pref_top_podcast_key"
        android:summary="@string/pref_top_podcast_summary"
        android:title="@string/pref_top_podcast_title" />
</PreferenceScreen>