<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_podcast"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/podcast_image"
        app:layout_collapseMode="pin" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/podcast_img_clean"
            android:layout_width="@dimen/one_handred_dp"
            android:contentDescription="@string/podcast_image"
            android:layout_height="@dimen/one_handred_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginStart="@dimen/ten_dp"/>

        <TextView
            android:id="@+id/podcast_cover_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/five_dp"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_toEndOf="@+id/podcast_img_clean"
            android:layout_toRightOf="@+id/podcast_img_clean"
            android:text="@string/par_jupiter"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/sixteen_sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/podcast_cover_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/podcast_cover_title"
            android:layout_alignRight="@+id/podcast_cover_title"
            android:layout_below="@+id/podcast_cover_title"
            android:layout_marginTop="@dimen/ten_dp"
            android:text="@string/franc_inter_label"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/sixteen_sp" />
    </RelativeLayout>

</FrameLayout>