<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/playback_controls_padding">

    <ImageView
        android:id="@+id/album_art"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/currently_playing_song"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/podcast_img"
        tools:src="@drawable/podcast_img" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/currently_playing_song"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/album_art"
        app:layout_constraintRight_toLeftOf="@+id/play_pause"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:text="The Best Music EVAH1111 THE BEST"
        tools:text="The Best Music EVAH1111 THE BEST" />

    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/currently_playing_artist"
        android:maxLines="1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/title"
        app:layout_constraintRight_toLeftOf="@+id/play_pause"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:text="John Doe and Band"
        tools:text="John Doe and Band" />

    <ImageButton
        android:id="@+id/play_pause"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/play_pause"
        android:padding="8dp"
        android:src="@drawable/ic_play"
        android:tint="@color/accent"
        android:tintMode="src_in"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
