<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/two_handred_fifty_dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/podcast_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/podcast_image_blur_label"
                android:scaleType="centerCrop"
                app:layout_collapseMode="pin" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/podcast_img_clean"
                    android:layout_width="@dimen/one_handred_fifty_dp"
                    android:layout_height="@dimen/one_handred_fifty_dp"
                    android:layout_marginLeft="@dimen/ten_dp"
                    android:contentDescription="@string/podcast_image_label" />

                <TextView
                    android:id="@+id/podcast_cover_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:layout_toEndOf="@+id/podcast_img_clean"
                    android:layout_toRightOf="@+id/podcast_img_clean"
                    android:text="Affaires sensibles - Franc Inter"
                    android:textColor="@color/md_white_1000"
                    android:textSize="@dimen/sixteen_sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/podcast_cover_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/podcast_cover_title"
                    android:layout_alignStart="@+id/podcast_cover_title"
                    android:layout_below="@+id/podcast_cover_title"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:text="@string/franc_inter_label"
                    android:textColor="@color/md_white_1000"
                    android:textSize="@dimen/sixteen_sp" />
            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsv_episode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_episode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/pb_loading_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_refresh"
                android:tint="@color/accent"
                android:visibility="gone"
                android:id="@+id/refresh"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>


    </android.support.v4.widget.NestedScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_subscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="Subscription Button"
        app:layout_anchor="@+id/app_bar"
        app:layout_anchorGravity="right|bottom"
        app:srcCompat="@drawable/ic_subscribe_notification_active" />


</android.support.design.widget.CoordinatorLayout>
